<resources>
    <string name="app_name">Online Booking</string>
    <string name="msgRedirect">Redirecting</string>
    <string name="msgIgnore">Skip</string>
    <string name="promotionaddress">http://101.200.57.42/dist/img/promotionplaceholder.png</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Engine</string>
    <string name="slide_1_desc">Tune for power or economy!</string>
    <string name="slide_2_title">Fleet Management</string>
    <string name="slide_2_desc">Develop a comprehensive checklist!</string>
    <string name="slide_3_title">Quality Care</string>
    <string name="slide_3_desc">Most advanced distribution network!</string>
    <string name="slide_4_title">Non-stop</string>
    <string name="slide_4_desc">Heavy duty truck maintenance!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Engines</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_reservations">My Cart</string>
    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="title_activity_enquiry">EnquiryActivity</string>

    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="dates">Choose Date</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
