<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/book"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/book"
            android:title="@string/item_2" />
    </group>
    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/my_orders"
                android:icon="@drawable/book"
                android:title="@string/my_orders" />
            <item
                android:id="@+id/my_account"
                android:icon="@drawable/book"
                android:title="@string/my_reservations" />
        </menu>
    </item>
    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
        </menu>
    </item>
</menu>
